[package]
name = "egui-hook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

retour = { version = "0.3.1", features = ["static-detour"] }
glow = "0.13.0"
egui = "0.25.0"
egui_glow = "0.25.0"
gl_loader = "0.1.2"

[dependencies.windows]
version = "0.52.0"
features = ["Wdk_System", "Wdk_System_SystemInformation", "Win32_Foundation", "Win32_Graphics_OpenGL", "Win32_System", "Win32_System_Console", "Win32_Security", "Win32_System_Threading", "Win32_System_LibraryLoader", "Win32_Graphics_Gdi", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_SystemServices", "Win32_System_WindowsProgramming"]
